test_suite/tests/ui/unexpected-literal/field.stderr
error: unexpected literal in serde field attribute
 --> $DIR/field.rs:5:13
  |
5 |     #[serde("literal")]
  |             ^^^^^^^^^
